# rascunhos

./: .gitignore  README.md  index.html  pyproject.toml
R_241118/: run.py
R_241119/: run.py
R_241120/: run.py
R_241121/: run.py
R_241122/: run.py
R_241123/: run.py
R_241124/: run.py
R_250813/: GUIA.MD  run.py  sss.json  sssjh.json  tiles.json
eca/: eca.py
hex/: __init__.py  hex_grid.py  hex_wave_collapse.py
maze/: maze.py
pyscript/: R_241118.html  config.json  index.html  p5script.py
spiral/: spiral.py
utils/: __init__.py  image_utils.py  math_utils.py  p5_utils.py
zen/: zen_utils.py  zentangle.py
