[project]
name = "rascunhos"
version = "0.1.1"
description = "Meus rascunhos criados com py5."
authors = ["Erick Menezes <erick@mrmenezes.dev>"]
url = "http://mrmenezesdev.github.io/rascunhos/"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.36.0",
    "numpy>=2.1.3",
    "py5[extras]>=0.10.3a1",
]
